# anomaly-correlator

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/skills/detection-rules/: SKILL.md
.claude/skills/security-docs/: SKILL.md
.claude/skills/synthetic-security-data/: SKILL.md
.github/workflows/: ci.yml
src/ghostbadge/: __init__.py  cli.py  models.py
src/ghostbadge/generator/: __init__.py  events.py  inject.py  org.py  personas.py  rng.py  roster.py  write.py
src/ghostbadge/rules/: __init__.py  base.py  gb_001_ghost_login.py  windows.py
src/ghostbadge/storage/: __init__.py  ingest.py  schema.py
tests/: test_package.py
tests/fixtures/malformed/: auth_events.jsonl  badge_events.jsonl  hr_roster.csv  labels.jsonl
tests/generator/: test_events.py  test_inject.py  test_roster.py
tests/rules/: factories.py  test_gb_001.py
tests/storage/: test_ingest.py
