[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostbadge"
version = "0.0.1"
description = "Physical-to-cyber anomaly correlator: detects anomalies by correlating synthetic badge-access logs with synthetic network authentication logs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Streamlit (Phase 5) and scikit-learn (Phase 6) are added when their phases start.
    "pydantic~=2.9",
    "sqlalchemy~=2.0.35",
    "typer~=0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "ruff~=0.6.9",
    "pre-commit~=3.8",
]

[project.scripts]
ghostbadge = "ghostbadge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "DTZ", # flake8-datetimez — enforces the timezone-aware-datetime convention
]
